added moves and abilities

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
             <div></div>
           </div>
           <div id="blueButtons1">
-            <div class="blueButton"></div>
-            <div class="blueButton"></div>
+            <div class="blueButton">
+              <div id="pokemonMoves" >moves</div>
+            </div>
+            <div class="blueButton">
+              <div id="pokemonAbilities"> abilities </div>
+            </div>
             <div class="blueButton"></div>
             <div class="blueButton"></div>
             <div class="blueButton"></div>
