--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>
         <div id="right">
           <div id="stats">
+            <div id="id" ></div>
             <div id="name"> </div>
             <div id="type"> </div>
-            <div id="height" ></div>
             <div id="weight"> </div>
             <div></div>
           </div>
