added next and back pokemon

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <div id="name"> </div>
             <div id="type"> </div>
             <div id="weight"> </div>
+            <div id="moves"></div>
             <div></div>
           </div>
           <div id="blueButtons1">
