--- a/index.html
+++ b/index.html
@@ -76,13 +76,17 @@
       </div>
       <div id="blueButtons1">
         <div class="blueButton">
-          <div id="pokemonMoves">moves</div>
+          <div id="pokemonMoves">Moves</div>
         </div>
         <div class="blueButton">
-          <div id="pokemonAbilities">abilities</div>
+          <div id="pokemonAbilities">Abilities</div>
         </div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
+        <div class="blueButton">
+          <div id="pokemonInfo"> Info </div>
+        </div>
+        <div class="blueButton">
+          <div id="pokemonStats"> Stats </div>
+        </div>
         <div class="blueButton"></div>
       </div>
       <div id="blueButtons2">
