removed info for now

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div id="pokemonAbilities">Abilities</div>
         </div>
         <div class="blueButton">
-          <div id="pokemonInfo"> Info </div>
+          <!-- <div id="pokemonInfo"> Info </div> -->
         </div>
         <div class="blueButton">
           <div id="pokemonStats"> Stats </div>
