removed html, and fixed js so it targets correct id

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     </div>
     <div id="right">
       <div id="stats">
-        <div id="id"></div>
+        <!-- <div id="id"></div>
         <div id="name"></div>
         <div id="type"></div>
         <div id="weight"></div>
-        <div id="moves"></div>
+        <div id="moves"></div> -->
         <div></div>
       </div>
       <div id="blueButtons1">
